--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.profiles.active=dev
+spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.autoconfigure.exclude[1]=org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
+spring.autoconfigure.exclude[2]=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
