--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.profiles.active=dev
 spring.autoconfigure.exclude[0]=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.autoconfigure.exclude[1]=org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 spring.autoconfigure.exclude[2]=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+togglz.enabled=true
+togglz.feature-enums=com.brodma.util.featureflag.FeatureFlags
+togglz.features.AUTHOR_SCENARIOS=false
+togglz.features.BOOK_SCENARIOS=false
+togglz.features.REVIEW_SCENARIOS=false
+togglz.features.SEARCH_SCENARIOS=false
+togglz.features.HIBERNATE_SEARCH_INDEX_BUILD=false
